--- a/components/nds-core/scss/typography/_settings.scss
+++ b/components/nds-core/scss/typography/_settings.scss
@@ -4,27 +4,27 @@
 
 /// Baseline, in pixels
 /// @since 0.2.0
-$baseline: 4 !default;
+$baseline: 4;
 
 /// Base font size, in pixels
 /// @since 0.2.0
-$base-font-size: $baseline * 4 !default;
+$base-font-size: 16;
 
-/// Base line height, in pixels
+/// Base line height
 /// @since 0.2.0
-$base-line-height: $baseline * 6 !default;
+$base-line-height: 1.6;
 
 /// Sans-serif font stack
 /// @since 2.0.0
-$font-family-sans: 'Inter, "Helvetica Neue", Helvetica, Arial, sans-serif' !default;
+$font-family-sans: 'Inter, Roboto, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif';
 
 /// Serif font stack
 /// @since 2.0.0
-$font-family-serif: 'Lora, Georgia, Times, serif' !default;
+$font-family-serif: 'Lora, Georgia, Times, serif';
 
 /// Mono font stack
 /// @since 0.2.0
-$font-family-mono: 'Monaco, Menlo, Consolas, "Courier New", monospace' !default;
+$font-family-mono: 'Monaco, Menlo, Consolas, "Courier New", monospace';
 
 /// The font families in use across NICE.
 /// @prop {Font stack} sans [Inter, Helvetica Neue, Helvetica, Arial, sans-serif] The sans-serif font stack
@@ -36,11 +36,11 @@ $font-families: (
   sans: $font-family-sans,
   serif: $font-family-serif,
   mono: $font-family-mono
-) !default;
+);
 
 /// The modular scale ratio to use for typography
 /// @since 0.2.0
-$type-ratio: modular-scale.get-ratio(fourth) !default;
+$type-ratio: modular-scale.get-ratio(fourth);
 
 /// The minimum root font size, in pixels
 /// @since 0.2.13
@@ -61,23 +61,25 @@ $root-font-size-min-breakpoint: media-queries.$md;
 $root-font-size-max-breakpoint: media-queries.$lg;
 
 /// A map of named font sizes to their corresponding modular scale factor
-/// @prop {Integer} h1 [5] Heading 1
+/// @prop {Integer} h1 [6] Heading 1
+/// @prop {Integer} h1-alt [5] Heading 1 (alt)
 /// @prop {Integer} h2 [4] Heading 2
 /// @prop {Integer} h3 [3] Heading 3
 /// @prop {Integer} h4 [2] Heading 4
 /// @prop {Integer} h5 [1] Heading 5
 /// @prop {Integer} h6 [0] Heading 6
-/// @prop {Integer} lead [2] Lead
+/// @prop {Integer} lead [1] Lead
 /// @prop {Integer} p [0] Paragraph
 /// @since 0.1.0
 $named-font-sizes: (
-  h1: 5,
+  h1: 6,
+  h1-alt: 5,
   h2: 4,
   h3: 3,
   h4: 2,
   h5: 1,
   h6: 0,
-  lead: 2,
+  lead: 1,
   p: 0
 );
 
@@ -85,56 +87,56 @@ $named-font-sizes: (
 /// @since 0.2.0
 $font-sizes: (
   -2: (
-      fs: 12,
-      lh: 18,
+      fs: 14,
+      lh: 1.6,
       mb: spacing.$small,
       mt: spacing.$small
     ),
   -1: (
-      fs: 14,
-      lh: 20,
+      fs: 15,
+      lh: 1.6,
       mb: spacing.$medium,
       mt: spacing.$medium
     ),
   0: (
     fs: 16,
-    lh: 24,
+    lh: 1.6,
     mb: spacing.$medium,
     mt: spacing.$medium
   ),
   1: (
     fs: 18,
-    lh: 24,
+    lh: 1.4,
     mb: spacing.$medium,
     mt: spacing.$large
   ),
   2: (
-    fs: 20,
-    lh: 28,
+    fs: 22,
+    lh: 1.3,
     mb: spacing.$medium,
     mt: spacing.$large
   ),
   3: (
     fs: 28,
-    lh: 32,
+    lh: 1.25,
     mb: spacing.$medium,
     mt: spacing.$large
   ),
   4: (
-    fs: 36,
-    lh: 40,
+    fs: 34,
+    lh: 1.2,
     mb: spacing.$medium,
     mt: spacing.$large
   ),
   5: (
-    fs: 44,
-    lh: 56,
+    fs: 38,
+    lh: 1.2,
     mb: spacing.$medium,
     mt: 0
   ),
   6: (
-    fs: 52,
-    lh: 60,
+    fs: 44,
+    lh: 1.2,
     mb: spacing.$large,
     mt: 0
   )
