--- a/components/nds-phase-banner/scss/phase-banner.scss
+++ b/components/nds-phase-banner/scss/phase-banner.scss
@@ -18,22 +18,23 @@
 /// @since 0.1.0
 .phase-banner {
   border-bottom: 1px solid colours.$border;
-  display: table;
-  margin: utils.em(0 0 spacing.$small);
+  display: flex;
+  flex-flow: row nowrap;
+  margin: utils.rem(0 0 spacing.$medium);
   max-width: 100%;
-  padding: utils.em(spacing.$small 0);
+  padding: utils.rem(spacing.$medium 0);
   width: 100%;
 
   &__tag {
-    display: table-cell;
-    padding: utils.em(0 spacing.$small 0 0);
-    vertical-align: top;
+    margin: utils.rem(0 spacing.$medium 0 0);
+
+    .tag {
+      margin: 0;
+    }
   }
 
   &__label {
-    display: table-cell;
-    line-height: 1.3;
-    vertical-align: middle;
+    padding-top: utils.rem(spacing.$xx-small);
     width: 100%;
   }
 }
