NDS-257 Add alt h1 option to page header

--- a/components/nds-page-header/scss/page-header.scss
+++ b/components/nds-page-header/scss/page-header.scss
@@ -40,6 +40,10 @@
   &__heading {
     @include typography.font-size(h1);
     margin: utils.rem(0 0 spacing.$small 0);
+
+    &--alt {
+      @include typography.font-size(h1-alt);
+    }
   }
 
   &__lead {
