--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -71,7 +71,7 @@ $action-banner-subtle-border: global.$nice-cream;
 
 // Alphabet
 $alphabet-letter-background: global.$white;
-$alphabet-letter-span: global.$black-tint-1;
+$alphabet-letter-span: global.$custom-grey-3;
 
 // Card
 $card-author: global.$black-tint-1;
