--- a/components/nds-callout/scss/callout.scss
+++ b/components/nds-callout/scss/callout.scss
@@ -39,7 +39,7 @@
 
       &:hover,
       &:focus {
-        text-decoration: underline;
+        text-decoration-line: underline;
       }
 
       &:before {
