--- a/components/nds-core/scss/typography/_settings.scss
+++ b/components/nds-core/scss/typography/_settings.scss
@@ -14,6 +14,10 @@ $base-font-size: 16;
 /// @since 0.2.0
 $base-line-height: 1.6;
 
+/// Default text decoration thickness for link hover
+/// @since 3.0.0
+$link-hover-text-decoration-thickness: 0.2rem;
+
 /// Sans-serif font stack
 /// @since 2.0.0
 $font-family-sans: 'Inter, Roboto, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif';
