NDS-257 Update inverse link hover and table stripe

--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -9,9 +9,9 @@ $link-visited: global.$custom-purple-1;
 $link-active: global.$nice-black;
 $link-focus: global.$custom-blue-1;
 $link-inverse: global.$white;
-$link-inverse-hover: global.$custom-grey-2;
+$link-inverse-hover: global.$custom-blue-3-tint;
 $link-inverse-visited: global.$white;
-$link-inverse-active: global.$custom-grey-2;
+$link-inverse-active: global.$custom-blue-3-tint;
 $link-inverse-focus: global.$white;
 $code-background: global.$custom-grey-4;
 $mark: global.$custom-yellow-highlight;
