NDS-257 Tweak table striping colour

--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -146,7 +146,7 @@ $stacked-nav-link-hover: global.$custom-grey-2;
 // Tables
 $table-heading: global.$white;
 $table-row-odd: global.$nice-cream-tint-1;
-$table-row-even: global.$nice-cream-3;
+$table-row-even: global.$custom-grey-4;
 
 // Tabs
 $tab-btn-selected: global.$custom-grey-4;
