NDS-257 Fix breadcrumb link colour in heroes

--- a/components/nds-hero/scss/hero.scss
+++ b/components/nds-hero/scss/hero.scss
@@ -26,6 +26,10 @@
   right: calc(50%);
   width: 100vw;
 
+  .breadcrumbs {
+    @include typography.links-inverse;
+  }
+
   &__container {
     @include layout.container;
   }
