NDS-257 Update tags and colours

--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -161,3 +161,8 @@ $tag-remove: global.$nice-teal;
 $tag-remove-hover-after: global.$nice-black;
 $tag-anchor: global.$white;
 $tag-print: global.$black;
+$tag-alpha: global.$custom-pink;
+$tag-beta: global.$custom-orange-2;
+$tag-guidance-new: global.$custom-purple-1;
+$tag-guidance-updated: global.$nice-blue-tint-1;
+$tag-guidance-consultation: global.$custom-green-2;
