--- a/components/nds-core/scss/colours/tokens/_global.scss
+++ b/components/nds-core/scss/colours/tokens/_global.scss
@@ -40,8 +40,11 @@ $custom-red-1: #b50f23;
 $custom-red-1-tint: #f9eced;
 $custom-orange-1: #dc8a07;
 $custom-orange-1-tint: #fbf7f1;
+$custom-orange-2: #bd5826;
 $custom-green-1: #68c103;
 $custom-green-1-tint: #f3faeb;
+$custom-green-2: #557021;
 $custom-yellow-shade: #d6ba32;
 $custom-yellow-highlight: #fff999;
 $custom-teal: #0092a6;
+$custom-pink: #d5367f;
