NDS-257 Fix link underlines

--- a/components/nds-card/scss/card.scss
+++ b/components/nds-card/scss/card.scss
@@ -52,7 +52,7 @@
     margin: 0;
 
     a {
-      text-decoration: underline;
+      text-decoration-line: underline;
 
       mark {
         background-color: colours.$mark;
