--- a/components/design-system/scss/typography/_lists.scss
+++ b/components/design-system/scss/typography/_lists.scss
@@ -2,7 +2,6 @@
 @use '@nice-digital/nds-core/scss/utils';
 @use '@nice-digital/nds-core/scss/typography';
 @use '@nice-digital/nds-core/scss/spacing';
-@use '@nice-digital/nds-core/scss/glyphs';
 @use '@nice-digital/nds-core/scss/colours';
 
 ////
@@ -10,34 +9,21 @@
 ////
 
 ul,
-ol {
+ol,
+.list {
   @include typography.list;
 
-  li,
-  .list__item {
+  li {
     margin-bottom: utils.rem(spacing.$small);
 
+    ol,
     ul,
     .list {
       margin-top: utils.rem(spacing.$small);
     }
-  }
-}
 
-/// Base list class. Can be used with various modifiers.
-/// @see .list--unstyled
-/// @see .list--loose
-/// @since 0.1.0
-.list {
-  @include typography.list;
-
-  li,
-  .list__item {
-    margin-bottom: utils.rem(spacing.$small);
-
-    ul,
-    .list {
-      margin-top: utils.rem(spacing.$small);
+    li {
+      margin-bottom: utils.rem(spacing.$x-small);
     }
   }
 }
@@ -57,13 +43,17 @@ ol {
 /// Loose list style - with a gap between list items
 /// @since 0.2.12
 .list--loose {
-  li,
-  .list__item {
+  li {
     margin-bottom: utils.rem(spacing.$medium);
 
+    ol,
     ul,
-    .list--loose {
+    .list {
       margin-top: utils.rem(spacing.$medium);
+    }
+
+    li {
+      margin-bottom: utils.rem(spacing.$small);
     }
   }
 }
@@ -71,13 +61,17 @@ ol {
 /// Tight list style - no margin between list items
 /// @since 1.2.0
 .list--tight {
-  li,
-  .list__item {
-    margin-bottom: 0;
+  li {
+    margin-bottom: utils.rem(spacing.$x-small);
 
+    ol,
     ul,
-    .list--loose {
+    .list {
       margin-top: 0;
+    }
+
+    li {
+      margin-bottom: 0;
     }
   }
 }
@@ -85,34 +79,37 @@ ol {
 /// Pipe separate list
 /// @since 0.5.0
 .list--piped {
+  align-items: center;
+  display: flex;
+  flex-flow: row wrap;
   list-style: none;
   margin-left: 0;
   max-width: none; // To override the default 66ch max width
   padding: 0;
 
-  li,
-  .list__item {
-    display: inline-block;
+  li {
+    align-items: center;
+    display: flex;
+    flex-flow: row nowrap;
     margin-bottom: 0;
-    margin-right: utils.rem(-4);
 
     a {
-      padding: utils.rem(spacing.$small);
+      margin-left: -(utils.rem(spacing.$medium));
+      margin-right: -(utils.rem(spacing.$medium));
+      padding: utils.rem(spacing.$small spacing.$medium);
     }
 
     &:after {
-      border-left: 1px solid colours.$icons;
-      content: glyphs.get-glyph(zero-width-space);
-      display: inline-block;
-      margin: utils.rem(0 spacing.$small);
-      overflow: hidden;
-      text-indent: -99px;
-      vertical-align: middle;
-      width: 0;
+      background: colours.$icons;
+      content: '';
+      height: utils.rem(spacing.$large);
+      margin: utils.rem(0 spacing.$medium);
+      width: 1px;
     }
 
     &:first-child {
       a {
+        margin-left: 0;
         padding-left: 0;
       }
     }
