--- a/components/design-system/scss/typography/_lists.scss
+++ b/components/design-system/scss/typography/_lists.scss
@@ -19,7 +19,8 @@ ol,
     ol,
     ul,
     .list {
-      margin-top: utils.rem(spacing.$small);
+      margin-bottom: 0;
+      margin-top: utils.rem(spacing.$x-small);
     }
 
     li {
@@ -49,7 +50,7 @@ ol,
     ol,
     ul,
     .list {
-      margin-top: utils.rem(spacing.$medium);
+      margin-top: utils.rem(spacing.$small);
     }
 
     li {
