SAD-518 Update default list spacing

--- a/components/design-system/scss/typography/_lists.scss
+++ b/components/design-system/scss/typography/_lists.scss
@@ -19,7 +19,7 @@ ol,
     ol,
     ul,
     .list {
-      margin-top: utils.rem(spacing.$small);
+      margin-top: utils.rem(spacing.$x-small);
     }
 
     li {
@@ -49,7 +49,7 @@ ol,
     ol,
     ul,
     .list {
-      margin-top: utils.rem(spacing.$medium);
+      margin-top: utils.rem(spacing.$small);
     }
 
     li {
