SAD-518 Remove nested list bottom margin

--- a/components/design-system/scss/typography/_lists.scss
+++ b/components/design-system/scss/typography/_lists.scss
@@ -26,6 +26,10 @@ ol,
       margin-bottom: utils.rem(spacing.$x-small);
     }
   }
+
+  ul {
+    margin-bottom: 0;
+  }
 }
 
 /// Unstyled list modifier - remove bullets, padding etc.
